--- a/Archivist.AI.Core/Archivist.AI.Core.csproj
+++ b/Archivist.AI.Core/Archivist.AI.Core.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Betalgo.OpenAI" Version="7.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
   </ItemGroup>
 
 </Project>
