--- a/Archivist.AI.Core/Archivist.AI.Core.csproj
+++ b/Archivist.AI.Core/Archivist.AI.Core.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Repository\library.jsonl">
+    <Content Include="Repository\Library\library.jsonl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
